# onlyoffice_odoo

./: .editorconfig  .gitignore  .pre-commit-config.yaml  .prettierignore  .pylintrc  .ruff.toml  3rd-Party.license  CHANGELOG documents.md  CHANGELOG templates.md  CHANGELOG.md  CONTRIBUTING.md  README.md  eslint.config.cjs  package-lock.json  package.json  prettier.config.cjs  pyproject.toml
.github/workflows/: lint.yml
onlyoffice_odoo/: __manifest__.py
onlyoffice_odoo/controllers/: controllers.py
onlyoffice_odoo/doc/: index.rst
onlyoffice_odoo/models/: res_config_settings.py
onlyoffice_odoo/utils/: config_constants.py  config_utils.py  file_utils.py  jwt_utils.py
onlyoffice_odoo/views/: res_config_settings_views.xml  templates.xml
onlyoffice_odoo_documents/: __manifest__.py
onlyoffice_odoo_documents/controllers/: controllers.py
onlyoffice_odoo_documents/doc/: index.rst
onlyoffice_odoo_documents/i18n/: de.po  en.po  es.po  fr.po  it.po  ja.po  pt_BR.po  ru.po  zh_CN.po
onlyoffice_odoo_documents/models/: __init__.py  onlyoffice_odoo_documents.py
onlyoffice_odoo_templates/: __manifest__.py
onlyoffice_odoo_templates/controllers/: controllers.py  fill_template.docbuilder  get_keys.docbuilder
onlyoffice_odoo_templates/data/: templates_data.xml
onlyoffice_odoo_templates/doc/: index.rst
onlyoffice_odoo_templates/models/: __init__.py  onlyoffice_odoo_templates.py
onlyoffice_odoo_templates/security/: onlyoffice_templates_security.xml
onlyoffice_odoo_templates/utils/: pdf_utils.py
onlyoffice_odoo_templates/views/: onlyoffice_menu_views.xml
(+31 files in other folders)
